--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,28 +1,99 @@
+
+    <div class="container-fluid" style="padding: 0px;">
+        <div id="carouselSite" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselSite" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselSite" data-slide-to="1"></li>
+                <li data-target="#carouselSite" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/hakuna-matata.png" alt="" class="img-fluid d-block">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/VELL_CALL.png" alt="" class="img-fluid d-block">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/Projeto_Regras_rrr.png" alt="" class="img-fluid d-block">
+                </div>
+            </div>
+            <a href="#carouselSite" class="carousel-control-prev" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a href="#carouselSite" class="carousel-control-next" role="button" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+                <span class="sr-only">Proximo</span>
+            </a>
+        </div>
+    </div>
+
+<br>
 <section>
-    <div id="carouselSite" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselSite" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselSite" data-slide-to="1"></li>
-            <li data-target="#carouselSite" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/img/GarmothHHh.png" alt="" class="img-fluid d-block">
+    <div class="container fluid bg-dark text-white center rounded">
+        <div class="row">
+
+            <div class="col-4">
+                <img src="assets/img/communityIcon_054atz2fpst01.png" alt="">
             </div>
-            <div class="carousel-item">
-                <img src="assets/img/VELL_CALL.png" alt="" class="img-fluid d-block">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/img/Projeto_Regras_rrr.png" alt="" class="img-fluid d-block">
+
+            <div class="col-sm-" style="padding-top: 5em;">
+                <h4>Sobre nossa Guilda</h4>
+                <h6>Somos uma guilda PVPVE casual, sem requerimentos de GS para aplicação.</h6>
+                <p>Venha fazer parte da nossa guilda!</p>
+                <button class="btn btn-primary">Aplicar-se</button>
             </div>
         </div>
-        <a href="#carouselSite" class="carousel-control-prev" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-            <span class="sr-only">Anterior</span>
-        </a>
-        <a href="#carouselSite" class="carousel-control-next" role="button" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
-            <span class="sr-only">Proximo</span>
-        </a>
+
     </div>
 </section>
+
+<br>
+
+<section>
+    <div class="container fluid bg-dark text-white center rounded">
+        <h4 style="padding-top: 20px;">Nossos membros</h4>
+        <div class="row">
+            <div class="col-12">
+                <img class="img-fluid rounded-circle border-primary" src="assets/img/nanynha.png" alt=""
+                    style="width: 200px; height: 200px">
+                <h5 style="color: rgb(255, 1, 234);">Nanynha/Ferscz <span class="badge bg-white" style="color: black;">
+                        Lider</span></h5>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-3">
+                <img class="img-fluid rounded-circle" src="assets/img/horus.png" alt=""
+                    style="width: 150px; height: 150px">
+                <h5 style="color: red;">Matheus (CharlloteSG) <span class="badge bg-white" style="color: black;">
+                        Oficial</span></h5>
+            </div>
+
+            <div class="col-3">
+                <img class="img-fluid rounded-circle" src="assets/img/RIcos.jpg" alt=""
+                    style="width: 150px; height: 150px">
+                <h5 style="color: rgb(0, 119, 255);">Tayar/Aktsuki_Gang <br><span class="badge bg-white" style="color: black;">
+                        Membro</span></h5>
+            </div>
+
+            <div class="col-3">
+                <img class="img-fluid rounded-circle" src="assets/img/Lucax.gif" alt=""
+                    style="width: 150px; height: 150px">
+                <h5 style="color: rgb(0, 119, 255);">!Lucax/TheOtakus<br><span class="badge bg-white" style="color: black;">
+                        Oficial</span>
+                </h5>
+            </div>
+
+            <div class="col-3">
+                <img class="img-fluid rounded-circle" src="assets/img/dj.gif" alt=""
+                    style="width: 150px; height: 150px">
+                <h5 style="color: red;">Adsumuss DJgordura <span class="badge bg-white" style="color: black;">
+                        Oficial</span></h5>
+            </div>
+        </div>
+    </div>
+</section>
+
+<br>
