--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,26 +5,43 @@
     <title>Inicio</title>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.css">
+    <!--Google Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
+    <!--Font Awersome -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+     <script src="js/querys.js"></script>
+    <script src="jquery/dist/jquery.min.js"></script>
+    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="@popperjs/core/dist/umd/popper-lite.js"></script>
+
 
 </head>
-<body>
+<body style="background-color: rgb(56, 129, 240);">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Rep. B.D.O</a>
+    <a class="navbar-brand" href="/"> <img src="assets/img/logo.png" alt="" class="img-fluid" style="width: 50px; height: 50px;"> </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Página Inicial</a>
+          <a class="nav-link" aria-current="page" href="/">Página Inicial</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Membros</a>
+          <a class="nav-link" href="/membros">Membros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Aplicar</a>
+          <a class="nav-link" href="#">Aplicar-se</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">Sobre</a>
         </li>
         
       </ul>
@@ -33,8 +50,24 @@
 </nav>
 
     {{{body}}}
-    <script src="jquery/dist/jquery.min.js"></script>
-    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="@popperjs/core/dist/umd/popper-lite.js"></script>
+
+    <footer class="footer mt-auto py-3 bg-dark text-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <h5>Entre em contato</h5>
+        <p>Discord</p>
+        <p>Facebook</p>
+        <p>Youtube</p>
+      </div>
+
+      <div class="col-6">
+        <a href="/login">Administração</a>
+      </div>
+    </div>
+    
+  </div>
+</footer>
+   
 </body>
 </html>
