--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,10 +11,10 @@
                     <img src="assets/img/hakuna-matata.png" alt="" class="img-fluid d-block">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/VELL_CALL.png" alt="" class="img-fluid d-block">
+                    <img src="assets/img/sobre2.png" alt="" class="img-fluid d-block">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/Projeto_Regras_rrr.png" alt="" class="img-fluid d-block">
+                    <img src="assets/img/Hakuna.png" alt="" class="img-fluid d-block">
                 </div>
             </div>
             <a href="#carouselSite" class="carousel-control-prev" role="button" data-slide="prev">
@@ -38,7 +38,7 @@
             </div>
 
             <div class="col-sm-" style="padding-top: 5em;">
-                <h4>Sobre nossa Guilda</h4>
+                <h4>Entre para nossa Guilda</h4>
                 <h6>Somos uma guilda PVPVE casual, sem requerimentos de GS para aplicação.</h6>
                 <p>Venha fazer parte da nossa guilda!</p>
                 <button class="btn btn-primary">Aplicar-se</button>
@@ -82,7 +82,7 @@
                 <img class="img-fluid rounded-circle" src="assets/img/Lucax.gif" alt=""
                     style="width: 150px; height: 150px">
                 <h5 style="color: rgb(0, 119, 255);">!Lucax/TheOtakus<br><span class="badge bg-white" style="color: black;">
-                        Oficial</span>
+                        Membro</span>
                 </h5>
             </div>
 
@@ -93,6 +93,8 @@
                         Oficial</span></h5>
             </div>
         </div>
+
+        <a href="/membros"><button class="btn btn-primary" style="margin-bottom: 30px;">Conheça todos nós</button></a>
     </div>
 </section>
 
