--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,11 +37,11 @@
           <a class="nav-link" href="/membros">Membros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Aplicar-se</a>
+          <a class="nav-link" href="/aplicase">Aplicar-se</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Sobre</a>
+          <a class="nav-link" href="/sobre">Sobre</a>
         </li>
         
       </ul>
@@ -56,9 +56,7 @@
     <div class="row">
       <div class="col-6">
         <h5>Entre em contato</h5>
-        <p>Discord</p>
-        <p>Facebook</p>
-        <p>Youtube</p>
+        <p> <img src="assets/img/icons8-logo-discord-48.png" alt=""><a href="discord.gg/un4MdeaUV"> Discord</a></p>
       </div>
 
       <div class="col-6">
